jwt user, time flash sale ready